Add consume-process-produce EOS (#132)
* Add consume-transform-produce-eos example

* update

* update

* deprecated

* updates

* renaming

* updates

* update

* update

* update

* update